# api-psicologia

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  iniciar.bat  main.py  pyproject.toml  requirements.txt  start_ollama.bat
app/api/: deps.py
app/api/v1/: __init__.py  admin.py  appointments.py  auth.py  notes.py  payments.py  psychologists.py  reviews.py  transcripts.py  video.py  ws_scribe.py
app/core/: config.py  limiter.py  security.py
app/db/: session.py
app/models/: domain.py
app/services/: appointment.py  clinical_ai.py  notifications.py  payment.py  schedule.py  scheduler.py  transcription.py  video.py
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/booking/cancel/: page.tsx
frontend/app/booking/success/: page.tsx
frontend/app/checkout/[id]/: page.tsx
frontend/app/dashboard/admin/: layout.tsx  page.tsx
frontend/app/dashboard/paciente/: layout.tsx  page.tsx
frontend/app/dashboard/paciente/perfil/: page.tsx
frontend/app/dashboard/psicologa/: layout.tsx  page.tsx
frontend/app/dashboard/psicologa/disponibilidade/: page.tsx
frontend/app/dashboard/psicologa/pacientes/: page.tsx
frontend/app/dashboard/psicologa/pacientes/[patient_id]/: page.tsx
frontend/app/dashboard/psicologa/perfil/: page.tsx
frontend/app/dashboard/psicologa/sessao/[id]/: page.tsx
frontend/app/forgot-password/: page.tsx
frontend/app/login/: page.tsx
frontend/app/psicologas/[id]/: page.tsx
frontend/app/psicologas/[id]/agendar/: page.tsx
frontend/app/register/: page.tsx
frontend/app/reset-password/: page.tsx
frontend/components/: LiveScribePanel.tsx  VideoRoom.tsx  conditional-shell.tsx  nav-bar.tsx  page-transition.tsx
frontend/components/BookingCalendar/: CalendarGrid.tsx  SlotPicker.tsx  index.tsx
frontend/components/booking/: booking-calendar.tsx  calendar-grid.tsx  confirm-panel.tsx  slot-picker.tsx
frontend/components/dashboard/: sidebar.tsx
frontend/components/ui/: alert.tsx  badge.tsx  button.tsx  card.tsx  separator.tsx  skeleton.tsx  toast.tsx
frontend/hooks/: use-checkout.ts  use-slots.ts  useAvailableSlots.ts
frontend/lib/: accent-colors.ts  auth.ts  bookingApi.ts  query-client.ts
frontend/lib/api/: appointments.ts
frontend/providers/: auth-context.tsx  providers.tsx
frontend/types/: booking.ts
migrations/: env.py  script.py.mako
migrations/versions/: 12a009c68c4e_add_accent_color_to_psychologist_profile.py  604c8e390137_merge_heads.py  76da55f5acd5_sua_mensagem.py  8c4081dee1de_add_gender_to_psychologist_profile.py  a1b2c3d4e5f6_add_session_recording_transcript_summary.py  a3f2c1b4d5e6_availability_specific_date.py  c4d5e6f7a8b9_add_avatar_url_to_users.py  d1e2f3a4b5c6_add_reviews_table.py  e2f3a4b5c6d7_add_notes_table.py  ef1d489cc568_add_is_verified_to_psychologist.py  f3a4b5c6d7e8_add_sex_to_users.py
scripts/: make_admin.py
